add pod for progress bar view

--- a/Stash/Podfile
+++ b/Stash/Podfile
@@ -7,6 +7,7 @@ target 'Stash' do
 
   # Pods for Stash
   pod 'SDWebImage', '~> 4.0'
+  pod 'LinearProgressBar'
 
   target 'StashTests' do
     inherit! :search_paths
